--- a/i18n/pt/docusaurus-plugin-content-docs/current/window-managers/stacking-wm/blackbox.mdx
+++ b/i18n/pt/docusaurus-plugin-content-docs/current/window-managers/stacking-wm/blackbox.mdx
@@ -23,202 +23,204 @@ export const Highlight = ({children, color}) => (
   </span>
 );
 
-<!-- Add your stuff after this -------------------- -->
+<!-- Adicione suas coisas depois disso -------------------- -->
 
-Fast, lightweight window manager for X, without all those annoying library dependencies. Blackbox is built with C++ and contains completely original code (even though the graphics implementation is similar to that of WindowMaker).
+Blackbox é um gerenciador de janelas rápido e leve para o X, sem aquelas bibliotecas e dependências incômodas. Blackbox é desenvolvido em C++ e contém código completamente original (embora a implementação gráfica seja semelhante à do WindowMaker).
 
 ![img](https://raw.githubusercontent.com/archcraft-os/misc-files/main/screenshots/blackbox/main.png)
 
-<!-- Installation --------------------------------- -->
+<!-- Instalação --------------------------------- -->
 
-## Installation
+## Instalação
 
-Once you finish installing Archcraft, **Blackbox** can be installed on the top of it. It's pre-configured and ready to go. Open a terminal and run the following command to install Blackbox :
+Após finalizar a instalação do Archcraft, o **Blackbox** pode ser instalado por cima dele. Ele já vem pré-configurado e pronto para uso. Abra um terminal e execute o seguinte comando para instalar o Blackbox:
+
 ```bash
 $ sudo pacman -Sy archcraft-blackbox
 ```
 
-<!-- Configuration -------------------------------- -->
+<!-- Configuração -------------------------------- -->
 
-## Configuration
+## Configuração
 
-Blackbox is pre-configured in Archcraft. In this section, We'll see how the Blackbox window manager is configured, what tools and utilities are used to make it look and work like a complete desktop environment.
+O Blackbox é pré-configurado no Archcraft. Nesta seção, veremos como o gerenciador de janelas Blackbox é configurado, quais ferramentas e utilitários são usados para torná-lo uma experiência completa de ambiente de desktop.
 
-### Config Structure
+### Estrutura de Configuração
 
-The configuration structure of Blackbox in Archcraft looks something like this:
+A estrutura de configuração do Blackbox no Archcraft é semelhante a esta:
 
 ```
-/usr/bin/run-blackbox   : Autostart programs
-~/.blackboxrc           : main blackbox config file
-~/.blackbox             : blackbox config directory
-├── alacritty           : terminal config
-├── scripts             : scripts used for blackbox
-├── styles              : blackbox styles/themes
-├── theme               : desktop theme (polybar, rofi configs) 
-├── dunstrc             : dunst config for notifications
-├── menu                : blackbox menu config
-├── picom.conf          : compositor config
-├── sxhkdrc             : keybindings config
-└── xsettingsd          : gtk themes, icons and fonts config file
+/usr/bin/run-blackbox   : Programas de início automático
+~/.blackboxrc           : Arquivo principal de configuração do Blackbox
+~/.blackbox             : Diretório de configuração do Blackbox
+├── alacritty           : Configuração do terminal
+├── scripts             : Scripts usados pelo Blackbox
+├── styles              : Estilos/temas do Blackbox
+├── theme               : Tema de área de trabalho (configurações do polybar, rofi) 
+├── dunstrc             : Configuração do dunst para notificações
+├── menu                : Configuração do menu do Blackbox
+├── picom.conf          : Configuração do compositor
+├── sxhkdrc             : Configuração de teclas de atalho
+└── xsettingsd          : Arquivo de configuração de temas GTK, ícones e fontes
 ```
 
 ### Terminal
 
-**Alacritty** is the default terminal. In the Blackbox window manager, alacritty is launched with an alternative config file. If you need to change anything, make sure you modify the config files in `~/.blackbox/alacritty` directory. These are the following config files you can modify to change the behaviour of your terminal:
+**Alacritty** é o terminal padrão. No gerenciador de janelas Blackbox, o Alacritty é iniciado com um arquivo de configuração alternativo. Se você precisar alterar algo, certifique-se de modificar os arquivos de configuração no diretório `~/.blackbox/alacritty`. Estes são os arquivos de configuração que você pode modificar para alterar o comportamento do seu terminal:
 
-**`~/.blackbox/alacritty/alacritty.toml`** : Main configuration file <br/>
-**`~/.blackbox/alacritty/colors.toml`** : Colors configurations <br/>
-**`~/.blackbox/alacritty/fonts.toml`** : Fonts configurations
+**`~/.blackbox/alacritty/alacritty.toml`** : Arquivo de configuração principal <br/>
+**`~/.blackbox/alacritty/colors.toml`** : Configurações de cores <br/>
+**`~/.blackbox/alacritty/fonts.toml`** : Configurações de fontes
 
-> If you need any help with alacritty config, run : `man 5 alacritty` in terminal.
+> Se você precisar de ajuda com a configuração do Alacritty, execute: `man 5 alacritty` no terminal.
 
-### Notification
+### Notificação
 
-**Dunst** is used as a notification daemon for notifications in Blackbox. In the Blackbox window manager, dunst is launched with an alternative config file, which is `~/.blackbox/dunstrc`. So, If you need to modify anything, make sure you edit this file.
+**Dunst** é usado como um daemon de notificações no Blackbox. No gerenciador de janelas Blackbox, o Dunst é iniciado com um arquivo de configuração alternativo, que é `~/.blackbox/dunstrc`. Portanto, se você precisar modificar algo, certifique-se de editar este arquivo.
 
-> If you need any help with dunst config, run : `man 5 dunst` in terminal.
+> Se você precisar de ajuda com a configuração do Dunst, execute: `man 5 dunst` no terminal.
 
-### Wallpaper
+### Papel de Parede
 
-**hsetroot** sets the wallpaper in the Blackbox. If you want to change the wallpaper, Edit `/usr/bin/run-blackbox` script and add the path to your wallpaper :
+**hsetroot** define o papel de parede no Blackbox. Se você quiser mudar o papel de parede, edite o script `/usr/bin/run-blackbox` e adicione o caminho para o seu papel de parede:
+
 ```bash
-# Restore wallpaper
-hsetroot -cover '/path/to/your/wallpaper'
+# Restaurar papel de parede
+hsetroot -cover '/caminho/para/seu/papel/de/parede'
+```
 ```
 
-### Statusbar
+### Barra de Status
 
-**Polybar** is used as the statusbar in Archcraft's Blackbox window manager.
+**Polybar** é usado como a barra de status no gerenciador de janelas Blackbox do Archcraft.
 
-The configurations for polybar can be found inside the _theme_ directory directory of Blackbox `~/.blackbox/theme`
+As configurações do Polybar podem ser encontradas dentro do diretório _theme_ do Blackbox em `~/.blackbox/theme`.
 
-If you want to modify the **polybar** settings, or perhaps want to add/remove modules, then you need to edit the following files :
+Se você deseja modificar as configurações do **polybar**, ou talvez adicionar/remover módulos, você precisará editar os seguintes arquivos:
 
-**`~/.blackbox/theme/polybar/config.ini`** : Main config file <br/>
-**`~/.blackbox/theme/polybar/colors.ini`** : Colors config file <br/>
-**`~/.blackbox/theme/polybar/modules.ini`** : Modules config file
+**`~/.blackbox/theme/polybar/config.ini`** : Arquivo de configuração principal <br/>
+**`~/.blackbox/theme/polybar/colors.ini`** : Arquivo de configuração de cores <br/>
+**`~/.blackbox/theme/polybar/modules.ini`** : Arquivo de configuração de módulos
 
-> If you need any help with polybar config, visit : [polybar wiki](https://github.com/polybar/polybar/wiki)
+> Se você precisar de ajuda com a configuração do Polybar, visite: [wiki do Polybar](https://github.com/polybar/polybar/wiki)
 
-### Launchers and Applets
+### Iniciadores e Applets
 
-**Rofi** is used for application launchers, command runner and various applets. To modify the rofi config, edit `~/.config/rofi/config.rasi` file.
+**Rofi** é usado para iniciadores de aplicativos, executores de comandos e vários applets. Para modificar a configuração do rofi, edite o arquivo `~/.config/rofi/config.rasi`.
 
-> If you need any help with rofi config, run : `man rofi` in terminal.
+> Se precisar de ajuda com a configuração do rofi, execute: `man rofi` no terminal.
 
-The scripts for rofi that are used in Blackbox can be found it `~/.blackbox/scripts` directory. These are the following scripts that uses rofi to provide the launchers and applets in Blackbox :
+Os scripts para rofi usados no Blackbox podem ser encontrados no diretório `~/.blackbox/scripts`. Estes são os seguintes scripts que usam o rofi para fornecer os iniciadores e applets no Blackbox:
 
-**`rofi_askpass`** : rofi based `sudo` frontend to get root password <br/>
-**`rofi_asroot`** : applet to open apps as root <br/>
-**`rofi_bluetooth`** : bluetooth applet to quickly connect to BT devices <br/>
-**`rofi_launcher`** : an application launcher, cmd runner, file manager and task manager  <br/>
-**`rofi_music`** : music applet, that controls MPD with `mpc` <br/>
-**`rofi_powermenu`** : power menu, with confirmation dialog <br/>
-**`rofi_runner`** : quickly lets you run a command <br/>
-**`rofi_screenshot`** : screenshot applet that works with maim <br/>
+**`rofi_askpass`** : Frontend baseado em rofi para o comando `sudo` para obter a senha do root <br/>
+**`rofi_asroot`** : Applet para abrir aplicativos como root <br/>
+**`rofi_bluetooth`** : Applet de Bluetooth para conectar rapidamente a dispositivos BT <br/>
+**`rofi_launcher`** : Iniciador de aplicativos, executor de comandos, gerenciador de arquivos e gerenciador de tarefas <br/>
+**`rofi_music`** : Applet de música que controla o MPD com `mpc` <br/>
+**`rofi_powermenu`** : Menu de energia com diálogo de confirmação <br/>
+**`rofi_runner`** : Permite rapidamente executar um comando <br/>
+**`rofi_screenshot`** : Applet de captura de tela que funciona com o maim <br/>
 
-If you want to modify any applet or perhaps want to extend the functionality of the applet, just edit these scripts above.
+Se você deseja modificar qualquer applet ou talvez estender a funcionalidade de algum, basta editar esses scripts.
 
-The configuration of each script can be found inside the _theme_ directory of Blackbox `~/.blackbox/theme`
+A configuração de cada script pode ser encontrada dentro do diretório _theme_ do Blackbox em `~/.blackbox/theme`.
 
-Let's say you want to modify the looks of **launcher**, then you need to edit the `~/.blackbox/theme/rofi/launcher.rasi` file. Same goes for every other applet, Edit the respective file in the same directory.
+Por exemplo, se você deseja modificar a aparência do **launcher**, edite o arquivo `~/.blackbox/theme/rofi/launcher.rasi`. O mesmo vale para outros applets, basta editar o arquivo respectivo no mesmo diretório.
 
-> If you need any help with rofi theming, run : `man rofi-theme` in terminal.
+> Se precisar de ajuda com o tema do rofi, execute: `man rofi-theme` no terminal.
 
-To change the colors and fonts of the launchers and applets, Edit the `~/.blackbox/theme/rofi/shared/colors.rasi` and `~/.blackbox/theme/rofi/shared/fonts.rasi` files.
+Para mudar as cores e fontes dos iniciadores e applets, edite os arquivos `~/.blackbox/theme/rofi/shared/colors.rasi` e `~/.blackbox/theme/rofi/shared/fonts.rasi`.
 
 ### Compositor
 
-**Picom** is used for compositing. It's a lightweight compositor with shadowing, advanced blurring and fading. In Blackbox, picom is launched with an alternative config file, which is `~/.blackbox/picom.conf`. 
+**Picom** é utilizado para composição. É um compositor leve com sombreamento, borramento avançado e desvanecimento. No Blackbox, o picom é iniciado com um arquivo de configuração alternativo, que é o `~/.blackbox/picom.conf`.
 
-If you need to change anything related to picom, Edit this picom config file.
+Se você precisar alterar algo relacionado ao picom, edite esse arquivo de configuração.
 
-> If you need any help with picom config, check the picom's default config file in `/etc/xdg/picom.conf`
+> Se precisar de ajuda com a configuração do picom, consulte o arquivo de configuração padrão do picom em `/etc/xdg/picom.conf`.
 
 :::info
 
-If you're having screen-tearing issues, using `glx` backend can solve this issue. <br/>
-If you're facing lagging, hangs and freezes, try switching between `xrender` and `glx` backend.  
-
+Se você está tendo problemas com tearing (corte na tela), usar o backend `glx` pode resolver esse problema. <br/>
+Se você estiver enfrentando lentidão, travamentos ou congelamentos, tente alternar entre os backends `xrender` e `glx`.  
 :::
 
 ### Window Manager
 
-The configuration of Blackbox is available in your home directory. To configure Blackbox window manager, these are the files that are used :
+A configuração do Blackbox está disponível no seu diretório pessoal. Para configurar o gerenciador de janelas Blackbox, os seguintes arquivos são utilizados:
 
-**`~/.blackboxrc`** : main configuration file responsible for determining the behaviour and settings of the overall session. Edit this file to configure slit, toolbar, workspaces, menu and blackbox appearance. <br/>
-**`~/.blackbox/sxhkdrc`** : keyboard shortcuts, Edit this file to add/remove keybindings. <br/>
-**`~/.blackbox/menu`** : Right click menu, Edit this file to add/remove menu items.
+**`~/.blackboxrc`** : arquivo de configuração principal responsável por determinar o comportamento e as configurações da sessão geral. Edite este arquivo para configurar o slit, a barra de ferramentas, áreas de trabalho, o menu e a aparência do Blackbox. <br/>
+**`~/.blackbox/sxhkdrc`** : atalhos de teclado. Edite este arquivo para adicionar ou remover keybindings. <br/>
+**`~/.blackbox/menu`** : Menu de clique direito. Edite este arquivo para adicionar ou remover itens do menu.
 
-> If you need any help with blackbox configuration, run : `man blackbox` in terminal. <br/>
-> If you need any help with sxhkd configuration, run : `man sxhkd` in terminal.
+> Se precisar de ajuda com a configuração do Blackbox, execute: `man blackbox` no terminal. <br/>
+> Se precisar de ajuda com a configuração do sxhkd, execute: `man sxhkd` no terminal.
 
-<!-- Keybindings ---------------------------------- -->
+<!-- Atalhos de teclado ---------------------------------- -->
 
-## Keybindings
+### Atalhos de teclado
 
-Here's a list of some important keybinds you need to know for operating Blackbox easily. If you want to view, modify or add new keybinds, Edit `~/.blackbox/sxhkdrc` file.
+Aqui está uma lista de alguns atalhos importantes que você precisa saber para operar o Blackbox com facilidade. Se você deseja visualizar, modificar ou adicionar novos atalhos, edite o arquivo `~/.blackbox/sxhkdrc`.
 
-### Applications
+### Aplicações
 
-| Keys | Action |
+| Atalho | Ação |
 | --- | --- |
-| <kbd>super + Return</kbd> | Open terminal (alacritty) |
-| <kbd>super + shift + Return</kbd> | Open fullscreen terminal |
-| <kbd>super + F</kbd> | Open file manager (thunar) |
-| <kbd>super + E</kbd> | Open text editor (geany) |
-| <kbd>super + W</kbd> | Open web browser (firefox) |
+| <kbd>super + Return</kbd> | Abre terminal (alacritty) |
+| <kbd>super + shift + Return</kbd> | Abre terminal em tela cheia |
+| <kbd>super + F</kbd> | Abre gerenciador de arquivos (thunar) |
+| <kbd>super + E</kbd> | Abre editor de texto (geany) |
+| <kbd>super + W</kbd> | Abre navegador (firefox) |
 
-### Menu and Applets
+### Menu e Applets
 
-| Keys | Action |
+| Atalho | Ação |
 | --- | --- |
-| <kbd>super</kbd> | Open application launcher |
-| <kbd>alt + F1</kbd> | Open application launcher |
-| <kbd>alt + F2</kbd> | Open command runner |
-| <kbd>super + N</kbd> | Open network manager applet |
-| <kbd>super + B</kbd> | Open bluetooth applet |
-| <kbd>super + M</kbd> | Open music applet |
-| <kbd>super + X</kbd> | Open powermenu applet |
-| <kbd>super + S</kbd> | Open screenshots applet |
-| <kbd>super + R</kbd> | Open apps as root applet |
+| <kbd>super</kbd> | Abre lançador de aplicativos |
+| <kbd>alt + F1</kbd> | Abre lançador de aplicativos |
+| <kbd>alt + F2</kbd> | Abre executor de comandos |
+| <kbd>super + N</kbd> | Abre applet de gerenciador de rede |
+| <kbd>super + B</kbd> | Abre applet de bluetooth |
+| <kbd>super + M</kbd> | Abre applet de música |
+| <kbd>super + X</kbd> | Abre applet de menu de energia |
+| <kbd>super + S</kbd> | Abre applet de capturas de tela |
+| <kbd>super + R</kbd> | Abre applet para rodar aplicativos como root |
 
-### Hardware Keys
+### Atalhos de Hardware
 
-| Keys | Action |
+| Atalho | Ação |
 | --- | --- |
-| <kbd>Print</kbd> | Take screenshot |
-| <kbd>alt + Print</kbd> | Take screenshot in 5 seconds delay |
-| <kbd>shift + Print</kbd> | Take screenshot in 10 seconds delay |
-| <kbd>ctrl + Print</kbd> | Take screenshot of currently focused window |
-| <kbd>super + Print</kbd> | Take screenshot of selected area |
-| <kbd>XF86AudioRaiseVolume</kbd> | Increase volume |
-| <kbd>XF86AudioLowerVolume</kbd> | Decrease volume |
-| <kbd>XF86AudioMute</kbd> | Toggle mute speakers |
-| <kbd>XF86AudioMicMute</kbd> | Toggle mute microphone |
-| <kbd>XF86Audio + Next/Prev/Play/Stop</kbd> | Media controls (MPD) |
-| <kbd>XF86MonBrightnessUp</kbd> | Increase display brightness |
-| <kbd>XF86MonBrightnessDown</kbd> | Decrease display brightness |
+| <kbd>Print</kbd> | Tira captura de tela |
+| <kbd>alt + Print</kbd> | Tira captura de tela com atraso de 5 segundos |
+| <kbd>shift + Print</kbd> | Tira captura de tela com atraso de 10 segundos |
+| <kbd>ctrl + Print</kbd> | Tira captura de tela da janela focada |
+| <kbd>super + Print</kbd> | Tira captura de tela da área selecionada |
+| <kbd>XF86AudioRaiseVolume</kbd> | Aumenta volume |
+| <kbd>XF86AudioLowerVolume</kbd> | Diminui volume |
+| <kbd>XF86AudioMute</kbd> | Alterna mudo nos alto-falantes |
+| <kbd>XF86AudioMicMute</kbd> | Alterna mudo no microfone |
+| <kbd>XF86Audio + Next/Prev/Play/Stop</kbd> | Controles de mídia (MPD) |
+| <kbd>XF86MonBrightnessUp</kbd> | Aumenta brilho da tela |
+| <kbd>XF86MonBrightnessDown</kbd> | Diminui brilho da tela |
 
-### Misc Keys
+### Atalhos Variados
 
-| Keys | Action |
+| Atalhos | Ação |
 | --- | --- |
-| <kbd>ctrl + alt + V</kbd> | Open vim in terminal |
-| <kbd>ctrl + alt + R</kbd> | Open ranger in terminal |
-| <kbd>ctrl + alt + H</kbd> | Open htop in terminal |
-| <kbd>ctrl + alt + M</kbd> | Run ncmpcpp with album art |
-| <kbd>ctrl + alt + L</kbd> | Trigger lockscreen |
-| <kbd>super + P</kbd> | Run colorpicker  |
-| <kbd>super + C</kbd> | Run xkill  |
-| <kbd>super + Escape</kbd> | Reload sxhkd configuration file |
+| <kbd>ctrl + alt + V</kbd> | Abre vim no terminal |
+| <kbd>ctrl + alt + R</kbd> | Abre ranger no terminal |
+| <kbd>ctrl + alt + H</kbd> | Abre htop no terminal |
+| <kbd>ctrl + alt + M</kbd> | Executa ncmpcpp com arte do álbum |
+| <kbd>ctrl + alt + L</kbd> | Aciona tela de bloqueio |
+| <kbd>super + P</kbd> | Executa seletor de cores |
+| <kbd>super + C</kbd> | Executa xkill |
+| <kbd>super + Escape</kbd> | Recarrega o arquivo de configuração do sxhkd |
 
-<!-- Themes --------------------------------------- -->
+<!-- Temas --------------------------------------- -->
 
 ## Screenshots
 
-Here's few screenshots of `Blackbox` desktop. These'll give you an idea of the experience of Blackbox in Archcraft. 
+Aqui estão algumas capturas de tela do `Blackcox`. Elas te darão uma ideia da experiência do Blackbox no Archcraft.
 
 |Desktop 1|Desktop 2|Desktop 3|Desktop 4|
 |---|---|---|---|
@@ -241,22 +243,22 @@ Here's few screenshots of `Blackbox` desktop. These'll give you an idea of the e
 ## FAQs
 
 <details>
-<summary><b>How to update my config to new configs?</b></summary>
+<summary><b>Como atualizar minha configuração para as novas configurações?</b></summary>
 
-When a new version of Archcraft Blackbox get released, And you update the system by `sudo pacman -Syu` or you update the Blackbox package by `sudo pacman -S archcraft-blackbox`, New config files get installed as **~/.blackbox_pacnew_YYYY-MM-DD** and **~/.blackboxrc_pacnew_YYYY-MM-DD** in your home directory.
+Quando uma nova versão do Archcraft Blackbox for lançada e você atualizar o sistema com `sudo pacman -Syu` ou atualizar o pacote do Blackbox com `sudo pacman -S archcraft-blackbox`, novos arquivos de configuração serão instalados como **~/.blackbox_pacnew_YYYY-MM-DD** e **~/.blackboxrc_pacnew_YYYY-MM-DD** no seu diretório pessoal.
 
-To use new configs : 
-- backup your old `~/.blackbox` directory and `~/.blackboxrc` file 
-- move `~/.blackbox_pacnew_YYYY-MM-DD` to `~/.blackbox`
-- move `~/.blackboxrc_pacnew_YYYY-MM-DD` to `~/.blackboxrc`
-- logout and login again.
+Para usar as novas configurações:
+- faça um backup do seu antigo diretório `~/.blackbox` e do arquivo `~/.blackboxrc`
+- mova `~/.blackbox_pacnew_YYYY-MM-DD` para `~/.blackbox`
+- mova `~/.blackboxrc_pacnew_YYYY-MM-DD` para `~/.blackboxrc`
+- faça logout e login novamente.
 
 </details>
 
 <details>
-<summary><b>How to change GTK theme, icons and cursor?</b></summary>
+<summary><b>Como alterar o tema GTK, ícones e cursor?</b></summary>
 
-To change GTK theme, icons and cursor in Blackbox session, Edit `~/.blackbox/xsettingsd` file and restart Blackbox to apply the changes.
+Para alterar o tema GTK, os ícones e o cursor na sessão do Blackbox, edite o arquivo `~/.blackbox/xsettingsd` e reinicie o Blackbox para aplicar as mudanças.
 ```bash
 Net/ThemeName "Kripton"
 Net/IconThemeName "Zafiro"
@@ -266,18 +268,18 @@ Gtk/CursorThemeName "Qogirr"
 </details>
 
 <details>
-<summary><b>How to manage multiple monitors and resolution in Blackbox?</b></summary>
+<summary><b>Como gerenciar múltiplos monitores e resolução no Blackbox?</b></summary>
 
-If you use multiple monitors with Blackbox window manager, you can manage them by running _Manager Monitors_ or `archcraft-randr` app.
+Se você usa múltiplos monitores com o gerenciador de janelas Blackbox, você pode gerenciá-los executando o _Manager Monitors_ ou o aplicativo `archcraft-randr`.
 
 </details>
 
 <details>
-<summary><b>Why Alacritty is not working on my computer?</b></summary>
+<summary><b>Por que o Alacritty não está funcionando no meu computador?</b></summary>
 
-Since Alacritty is a OpenGL based terminal emulator, It may not work on some computer hardwares. You can make it work on such computers by following these methods :
+Como o Alacritty é um emulador de terminal baseado em OpenGL, ele pode não funcionar em alguns hardwares de computador. Você pode fazer com que ele funcione nesses computadores seguindo esses métodos:
 
-1. Open alacritty with **LIBGL_ALWAYS_SOFTWARE=1** variable. Edit the keybindings/script launching alacritty and replace `alacritty` with `LIBGL_ALWAYS_SOFTWARE=1 alacritty`
-2. Edit **/usr/share/applications/Alacritty.desktop** desktop file and replace `Exec=alacritty` with `Exec=env LIBGL_ALWAYS_SOFTWARE=1 alacritty`
+1. Abra o Alacritty com a variável **LIBGL_ALWAYS_SOFTWARE=1**. Edite as teclas de atalho/script que lançam o Alacritty e substitua `alacritty` por `LIBGL_ALWAYS_SOFTWARE=1 alacritty`.
+2. Edite o arquivo **/usr/share/applications/Alacritty.desktop** e substitua `Exec=alacritty` por `Exec=env LIBGL_ALWAYS_SOFTWARE=1 alacritty`.
 
 </details>
